lab02/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web13
  labels:
    org.bstu.owner: ohdima
    org.bstu.student.slug: ac-576-220239-v13
    org.bstu.student.id: "220239"
    org.bstu.group: AC-576
    org.bstu.variant: "13"
    org.bstu.course: RSIOT
